tests/type-errors/no_container_subset_variable.arl
archetype no_container_subset_variable

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: et subset;
}

variable c : et subset = []

entry start () {
	effect {
		()
	}
}
